# arcade-audio-curator

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: agent_main.py
evals/: eval_tools.py
src/arcade_audio_curator/: __init__.py  database.py  models.py  scoring.py  server.py
src/arcade_audio_curator/data/: activity_profiles.json  songs.json
tests/: test_toolkit.py
