[project]
name = "arcade-audio-curator"
version = "0.1.0"
description = "MCP Server that curates activity-aware music playlists using genre, mood, BPM, and energy — not tempo alone."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.17.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "arcade-mcp[all]>=1.12.1,<2.0.0",
    "arcade-tdk>=3.6.0",
    "anthropic>=0.40.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
]
agent = [
    "anthropic>=0.40.0",
]

[project.entry-points.arcade_toolkits]
toolkit_name = "arcade_audio_curator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arcade_audio_curator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
